# bingo-card-generator

./: .gitignore  README.md  app.py  gen_latex.py  paths.py  pyproject.toml
helpers/: text_in_rectangle.py
models/: card_template.py  cell.py
services/: base_64_encode_file_service.py  card_templates_service.py  detect_image_cells_service.py  file_identity_service.py  file_save_service.py  fill_bingo_card_service.py
services/addons/: addon.py  spook_bingo_addon.py  warm_and_fuzzy_addon.py
services/cell_content/: american_bingo_cell_content_definition.py  cell_content_definition.py  cell_content_generator.py
services/cell_content/definitions/: american_bingo_cell_content_definition.py  cell_content_definition.py
tests/: __init__.py  test_fill_bingo_card_service.py
tests/services/: test_detect_image_cells_service.py  test_fill_bingo_card_service.py
tests/services/cell_content/: test_american_bingo_cell_content_definition.py  test_cell_content_generator.py
tests/services/cell_content/definitions/: test_american_bingo_cell_content_definition.py
web/: app.py
web/templates/: measure_template.html.jinja2  pre_fill_template.html.jinja2  template_upload.html.jinja2
